@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.0
 
+	- Minor changes to the MacOS X event handling code.
 	- Added syntax highlighting example code to the editor
 	  test program.
 	- Fl_Text_Display didn't range check style buffer
